# hyprwin

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .luarc.json  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  hw_annotations.lua
.github/workflows/: ci.yml
cmake/: CompilerOptions.cmake  D3DCompilerRuntime.cmake  LuaJIT.cmake  LuaStdlib.cmake  Package.cmake  Shaders.cmake  version.hpp.in
src/: main.cpp  pch.hpp
src/config/: default_config.hpp  settings.hpp
src/keyboard/: key_event.hpp  key_state.hpp  keyboard.cpp  keyboard.hpp
src/log/: log.cpp  log.hpp  log_window.cpp
src/lua/: context.hpp  runtime.cpp  runtime.hpp  safe_mode.hpp  stdlib.lua  timeout.cpp  timeout.hpp
src/lua/api/: audio.cpp  clipboard.cpp  color.cpp  core.cpp  fs.cpp  input.cpp  internal.hpp  monitor.cpp  mouse_api.cpp  register.cpp  settings.cpp  system.cpp  vec.cpp  window.cpp
src/lua/binds/: bind_registry.cpp  bind_registry.hpp  key_event.hpp  key_parse.cpp  key_parse.hpp
src/lua/util/: fields.hpp  stack.cpp  stack.hpp
src/mouse/: mouse.cpp  mouse.hpp  selection.cpp  selection.hpp
src/overlay/: atomic_rect.hpp  border_shader.cpp  border_shader.hpp  bounds.cpp  bounds.hpp  cmd.hpp  dx_context.cpp  dx_context.hpp  overlay_window.cpp  overlay_window.hpp  renderer.cpp  renderer.hpp  service.cpp  service.hpp  service_commands.cpp  service_placement.cpp  session.cpp  session.hpp
src/overlay/outline/: cache.cpp  cache.hpp  compiler.cpp  compiler.hpp  manager.cpp  manager.hpp  outline_shader.cpp  outline_shader.hpp  types.hpp
src/overlay/placement/: worker.cpp  worker.hpp
src/overlay/render/: dx_context.cpp  renderer.cpp  renderer.hpp
src/overlay/thumbnail/: thumbnail.hlsl  thumbnail_shader.cpp  thumbnail_shader.hpp  window_snapshot.cpp  window_snapshot.hpp
src/perf/: perf.cpp  perf.hpp
src/res/: hyprwin.rc.in
src/shader/: cache.cpp  cache.hpp  compiler.cpp  compiler.hpp  default.hlsl  hyprwin_shader_api.hlsl  manager.cpp  manager.hpp  types.hpp
src/shaders/: thumbnail.hlsl
src/tray/: assets.hpp  components.hpp  tray.hpp
src/util/: color.hpp  debug.hpp  geometry.hpp  key_parse.cpp  key_parse.hpp  spsc_queue.hpp  strings.hpp  thread_priority.hpp
src/win/: app.cpp  app.hpp  launch.cpp  launch.hpp  monitor.cpp  monitor.hpp  native.cpp  native.hpp  policy_config.hpp  ui.cpp  ui.hpp  window.cpp  window.hpp  window_internal.hpp
